--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,6 @@
 body {
-    background-color: palegoldenrod;
+    background-color: #ed1c24;
+    font-family: monospace;
+    font-size: 32px;
+    text-align: center;
   }
